src/styles/global.css
/*
  ## Styling
    The CSS in this style tag is based off of Bear Blog's default CSS. 
    https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
    License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md

  ## Fonts
    Domine:
      Copyright (c) 2012, Pablo Impallari (www.impallari.com|impallari@gmail.com),
      Copyright (c) 2012, Rodrigo Fuenzalida (www.rfuenzalida.com|hello@rfuenzalida.com),
      Copyright (c) 2012, Brenda Gallo (gbrenda1987@gmail.com), with Reserved Font Name Domine.

    Alegreya:
      Copyright (c) 2011, Juan Pablo del Peral (juan@huertatipografica.com.ar), with Reserved Font Names “Alegreya” “Alegreya SC”

    IBM Plex:
      Copyright © 2017 IBM Corp. with Reserved Font Name "Plex"

    These Font Softwares are licensed under the SIL Open Font License, Version 1.1.
    This license is available with a FAQ at: http://scripts.sil.org/OFL
 */

:root {
  --accent: #41ac8f;
  --accent-dark: #065641;
  --black: 15, 18, 25;
  --gray: 96, 115, 159;
  --gray-light: 232, 232, 232;
  --gray-dark: 35, 35, 35;
  --bg: 255, 255, 255;
  --bg-reverse: 0, 0, 0;
  --gray-gradient: rgba(var(--gray-light), 50%), rgb(var(--bg));
  --box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
    0 16px 32px rgba(var(--gray), 33%);
  --row-odd: 241, 241, 241;
  --row-even: 250, 250, 250;

  @media (prefers-color-scheme: dark) {
    --black: 240, 237, 230;
    --gray: 170, 170, 170;
    --gray-light: 23, 23, 23;
    --gray-dark: 220, 220, 220;
    --bg: 0, 0, 0;
    --bg-reverse: 255, 255, 255;
    --row-odd: 31, 31, 31;
    --row-even: 46, 46, 46;
  }
}

@font-face {
  font-family: "Domine";
  src: url("/fonts/domine-bold.woff2") format("woff2");
  font-style: normal;
  font-weight: 700;
  font-display: swap;
}
@font-face {
  font-family: "Alegreya";
  src: url("/fonts/alegreya-regular.woff2") format("woff2");
  font-style: normal;
  font-weight: normal;
  font-display: swap;
}
@font-face {
  font-family: "Alegreya";
  src: url("/fonts/alegreya-italic.woff2") format("woff2");
  font-style: italic;
  font-weight: normal;
  font-display: swap;
}
@font-face {
  font-family: "Alegreya";
  src: url("/fonts/alegreya-bold.woff2") format("woff2");
  font-style: normal;
  font-weight: 700;
  font-display: swap;
}
@font-face {
  font-family: "Alegreya";
  src: url("/fonts/alegreya-bolditalic.woff2") format("woff2");
  font-style: italic;
  font-weight: 700;
  font-display: swap;
}
@font-face {
  font-family: "IBM Plex Mono";
  src: url("/fonts/ibm-plex-mono-regular.woff2") format("woff2");
  font-style: normal;
  font-weight: normal;
  font-display: swap;
}

body {
  font-family: 'Alegreya', serif;
  margin: 0;
  padding: 0;
  text-align: left;
  background: linear-gradient(var(--gray-gradient)) no-repeat, rgb(var(--bg));
  background-size: 100% 600px, auto;
  word-wrap: break-word;
  overflow-wrap: break-word;
  color: rgb(var(--gray-dark));
  font-size: 20px;
  line-height: 1.7;
}
main {
  width: 720px;
  max-width: calc(100% - 2em);
  margin: auto;
  padding: 3em 1em;
}
h1,
h2,
h3,
h4,
h5,
h6 {
 font-family: 'Domine', serif;
  margin: 0 0 0.5rem 0;
  color: rgb(var(--black));
  line-height: 1.2;
}
h1 {
  font-size: 3.052em;
}
h2 {
  font-size: 2.441em;
}
h3 {
  font-size: 1.953em;
}
h4 {
  font-size: 1.563em;
}
h5 {
  font-size: 1.25em;
}
@media (max-width: 720px) {
  h1 {
   font-size: 2.441em;
 }
 h2 {
   font-size: 1.953em;
 }
 h3 {
   font-size: 1.563em;
 }
 h4 {
   font-size: 1.25em;
 }
 h5 {
   font-size: 1em;
 }
}
strong,
b {
  font-weight: 700;
}
a {
  color: var(--accent);
}
a:hover {
  color: var(--accent);
}
p {
  margin-bottom: 1em;
}
.prose p {
  margin-bottom: 2em;
}
textarea {
  width: 100%;
  font-size: 16px;
}
input {
  font-size: 16px;
}
table {
  width: 100%;
  border-collapse: collapse;
  margin: 1em 0;
  box-shadow: 0 0 1em rgba(var(--bg-reverse), 0.20);
}
th {
  padding: .5em;
}
td {
  padding: .25em .5em;
}
tr {
  border-bottom: 1px solid rgb(var(--bg));
}
tbody > tr:last-of-type {
  border-bottom: 2px solid var(--accent);
}
thead {
  background-color: rgb(var(--gray-light));
  text-transform: capitalize;
}
tbody > tr:nth-child(odd) {
  background-color: rgb(var(--row-odd));
}
tbody > tr:nth-child(even) {
  background-color: rgb(var(--row-even));
}
img {
  max-width: 100%;
  height: auto;
  border-radius: 8px;
}
code {
  font-family: 'IBM Plex Mono', 'Courier New', Courier, monospace;
  font-size: 18px;
  padding: 2px 5px;
  background-color: rgb(var(--gray-light));
  border-radius: 2px;
}
kbd {
  font-family: 'IBM Plex Mono', 'Courier New', Courier, monospace;
  font-size: 18px;
}
pre {
  padding: 1.5em;
  border-radius: 8px;
}
pre > code {
  all: unset;
  font-size: 18px;
}
blockquote {
  border-left: 4px solid var(--accent);
  padding: 0 0 0 20px;
  margin: 0px;
  font-size: 1.333em;
}
hr {
  border: none;
  border-top: 1px solid rgb(var(--gray-light));
}
@media (max-width: 720px) {
  main {
    padding: 1em;
  }
}

.sr-only {
  border: 0;
  padding: 0;
  margin: 0;
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
  clip: rect(1px 1px 1px 1px);
  /* maybe deprecated but we need to support legacy browsers */
  clip: rect(1px, 1px, 1px, 1px);
  /* modern browsers, clip-path works inwards from each corner */
  clip-path: inset(50%);
  /* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
  white-space: nowrap;
}

